--- a/style/login.css
+++ b/style/login.css
@@ -1,6 +1,39 @@
-#login-container h1 { font-weight: bold; font-size: 41px }
+#login-container h1 { font-weight: bold; font-size: 41px;
+    padding-bottom: 24px; }
 
-#login-container p {
+#login-container form h4 {
+    color: #999;
+    font-size: 12px;
+    font-weight: 500;
+}
+
+#login-container a {
+    color: #333;
+    font-size: 14px;
+    text-decoration: none;
+    margin: 15px 5px;
+}
+
+#login-container form a {
+    color: #3B6D9A;
+    font-weight: 400;
+    font-size: 12px;
+}
+@media (min-width: 576px) {
+    #login-container form a {
+        display: none;
+    }
+    #login-container p {
+        font-size: 14px;
+        font-weight: 100;
+        line-height: 20px;
+        letter-spacing: 0.5px;
+        margin: 20px 0 30px;
+    }
+}
+
+
+#login-container form p {
     font-size: 14px;
     font-weight: 100;
     line-height: 20px;
@@ -10,16 +43,11 @@
 
 
 
-#login-container a {
-    color: #333;
-    font-size: 14px;
-    text-decoration: none;
-    margin: 15px 5px;
-}
+
 #login-container a:hover { text-decoration: underline }
 
 #login-container button {
-    border-radius: 20px;
+    width: 100%;
     border: 1px solid #7cbe49;
     background-color: #7cbe49;
     color: #FFF;
@@ -29,6 +57,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     transition: transform 80ms ease-in;
+    border-radius: 10px;
 }
 #login-container button:hover { background-color: #629c35 }
 
@@ -57,13 +86,22 @@
 }
 
 #login-container input {
-    background-color: #eee;
-    padding: 12px 15px;
-    margin: 8px 0;
-    border-radius: 2px;
-    height: 40px;
-    width: 100%;
-    border: 0 solid #fff;
+    color: rgba(0, 0, 0, 0.87);
+    resize: vertical;
+    font-size: 16px;
+    background: transparent;
+    line-height: 16px;
+    letter-spacing: 0.25px;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    text-align: left;
+    transition: border-color 0.3s ease 0s;
+    pointer-events: none;
+    border-radius: 10px;
+    margin-top: 0;
+    padding-left: 10px;
+}
+#login-container input:focus {
+    border-color: #7cbe49;
 }
 
 #login-container {
@@ -209,9 +247,13 @@
 }
 
 #login-container button.hexa {
-    border: none;
-    border-radius: 0;
-    height: 40px;
+    height: 48px;
+    font-size: 16px;
+    line-height: 14px;
+    font-weight: 500;
+}
+#login-container button.disabled {
+    opacity: 0.3;
 }
 #login-container button.hexa:before {
     height: 40px;
@@ -231,7 +273,7 @@
     background-image: url(images/after.svg);
 }
 #login-container .alert {
-    position: absolute;
+    /*position: absolute;*/
     width: 100%;
     color: #fff;
     font-size: 14px;
@@ -240,8 +282,45 @@
     list-style: none;
     margin-bottom: 5px;
 }
+
+#login-container .input-group {
+    position: relative;
+    width: 100%;
+}
+
+.input-group label {
+    position: absolute;
+    color: rgba(0, 0, 0, 0.4);
+    top: 11px;
+    left: 10px;
+    font-size: 16px;
+    line-height: 17px;
+    letter-spacing: 0.25px;
+    transition: all 0.2s ease 0s;
+    background: #fff;
+    padding: 0px 5px;
+}
+
+#login-container .input-group.val label {
+    top: -8px;
+    font-size: 12px;
+    height: 17px;
+    background: #fff;
+}
+
 @media screen and (max-width: 576px) {
     #login-container, #login-container .form-container { width: 100% }
     #login-container.right-panel-active .sign-up-container { transform: none }
     #login-container form { padding: 0 20px }
+    #login-container {
+        min-height: 460px;
+    }
+
+    #login-container h1 { font-weight: 500; font-size: 20px; margin-bottom: 20px; }
+    #login-container { font-family: sans-serif }
+    #login-container h1,
+    #login-container h4,
+    #login-container input {
+        margin-bottom: 24px;
+    }
 }
