--- a/style/style.css
+++ b/style/style.css
@@ -4148,3 +4148,121 @@ textarea:active {
         padding-left: 15px;
     }
 }
+
+
+body.parts main .catalog__detal a {
+    background: #fff;
+    padding: 5px 10px;
+    margin-top: 8px;
+    margin-left: 0;
+    margin-right: 8px;
+    border-radius: 10px;
+    border: 1px solid #9d9fa1;
+}
+body.parts main .catalog__detal a div {
+    margin-top: 0;
+}
+@media screen and (max-width: 426px) {
+    body.parts main .catalog__detal a {
+        margin-left: 0 !important;
+    }
+}
+
+.btn-1 {
+    background: #fff;
+    height: 40px;
+    border-radius: 10px;
+    border: 1px solid #9d9fa1;
+    color: #4d4d4d;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+@media (max-width: 991px) {
+    .btn-1:hover {
+        background: #fff !important;
+    }
+}
+.btn-1.active {
+    background: #7cbe49 !important;
+    color: #fff;
+}
+.btn-1
+.btn-1 svg,
+.btn-1 img {
+    width: 22px;
+    height: 22px;
+    margin-right: 8px;
+}
+
+@media (max-width: 426px) {
+    main .catalog__sorted {
+        position: relative;
+    }
+    main .catalog__sorted > div {
+        position: absolute;
+        z-index: 3;
+        top: 0;
+        right: 0;
+        width: calc(50% - 5px);
+        background: #fff;
+        border-radius: 8px;
+        padding: 10px 10px;
+        padding-top: 15px;
+        padding-bottom: 0;
+        box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.5);
+    }
+    main .catalog__sorted > div a {
+        display: block;
+        padding: 15px 10px;
+        margin-bottom: 5px;
+        white-space: nowrap;
+        line-height: 0;
+        font-size: 14px;
+        border-radius: 4px;
+        width: auto;
+        width: max-content;
+    }
+
+    #filter-bar {
+        position: fixed;
+        z-index: 9999;
+        left: -281px;
+        top: 0;
+        width: 75vw;
+        height: 100vh;
+        overflow-y: scroll;
+        background: #fff;
+        transition: all .35s;
+    }
+    #filter-bar.active {
+        left: 0;
+    }
+
+    main #filter-bar input[type=text] {
+        border-radius: 10px;
+        height: 35px;
+        border: 1px solid #D1D1D1;
+    }
+    main #filter-bar .values input[type=checkbox]+label:before {
+        border: 1px solid #999999;
+        line-height: 0;
+        margin: 0 10px 3px 0;
+        width: 8px;
+        height: 8px;
+        vertical-align: middle;
+    }
+    main #filter-bar .values input[type=checkbox]+label {
+        background: #fff;
+        padding: 5px 10px;
+        margin-top: 8px;
+        margin-left: 0;
+        margin-right: 8px;
+        border-radius: 10px;
+        border: 1px solid #9d9fa1;
+        width: auto;
+        width: max-content;
+    }
+}
+
