--- a/app/services/cart/style/checkout.css
+++ b/app/services/cart/style/checkout.css
@@ -123,3 +123,31 @@
     -ms-animation-iteration-count: infinite;
     -ms-animation-timing-function: linear;
 }
+
+.input-group {
+    padding-top: 10px;
+}
+.input-group input {
+    /* margin: 10px 0; */
+}
+.input-group label {
+    font-size: 15px;
+    top: 14px;
+}
+
+#cart .input-group.val input {
+    border: 1px solid #74C186 !important;
+}
+.input-group.val label {
+    padding: 0 10px !important;
+    top: 0;
+}
+
+.text-danger {
+    color: #FF3300;
+    margin-bottom: 5px;
+}
+
+#cart input:-internal-autofill-selected {
+    background-color: #fff !important;
+}
