checkout: on submit add validation for inputs

--- a/app/services/cart/style/cart.css
+++ b/app/services/cart/style/cart.css
@@ -53,7 +53,7 @@
 #cart .checkout {
 	box-sizing: border-box;
 	display: block;
-	background: #eee;
+	background: #FFC505;
 	color: #fff;
 	width: 100%;
 	text-align: center;
