--- a/app/services/cart/style/checkout.css
+++ b/app/services/cart/style/checkout.css
@@ -157,3 +157,9 @@
     background: #fff;
     padding: 15px;
 }
+
+h4 small.pull-right {
+    font-size: 14px;
+    cursor: pointer;
+    padding-top: 5px;
+}
