--- a/style/style.css
+++ b/style/style.css
@@ -159,7 +159,23 @@ main img {
     top: 10%;
     left: calc(50% - 210px);
     z-index: 999;
-    display: none
+    display: none;
+    overflow-y: auto;
+}
+
+.modal::-webkit-scrollbar {
+    width: 5px;
+}
+
+.modal::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.modal::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 5px;
+    border: 5px solid #7cbe49;
+    box-shadow: inset 1px 1px 5px #7cbe49 ;
 }
 
 .modal i.fa-times {
