--- a/style/style.css
+++ b/style/style.css
@@ -874,7 +874,7 @@ header nav a.active::before {
 main h1 {
     font-size: 20px;
     font-weight: 600;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-style: normal;
     letter-spacing: 2px;
     text-align: center;
