Update models mobile

--- a/style/ws__main.css
+++ b/style/ws__main.css
@@ -132,6 +132,7 @@ input:focus { outline: none }
 	.m-flex.column, .flex.m-column { flex-direction: column }
 	.m-flex.column-reverse, .flex.m-column-reverse { flex-direction: column-reverse }
 	.m-flex.wrap, .flex.m-wrap { flex-wrap: wrap }
+	.m-flex.wrap, .flex.m-nowrap { flex-wrap: nowrap }
 	.m-flex.h-start, .flex.m-h-start { justify-content: flex-start }
 	.m-flex.h-center, .flex.m-h-center { justify-content: center }
 	.m-flex.h-evenly, .flex.m-h-evenly { justify-content: space-evenly }
