--- a/style/style.css
+++ b/style/style.css
@@ -931,34 +931,53 @@ main section.cars__base .fa-times {
 }
 
 @media (max-width: 500px) {
-    main .main__logo a { 
-        width: 100%;
+    main .main__logo a,
+    main section.cars__base .base__detal {
+        width: 100% !important;
         height: 40px;
-        margin-bottom: 0px;
+        margin-bottom: 2px;
+        display: flex;
         flex-direction: row;
+        background: #fff;
+        border-radius: 3px;
+        padding: 10px;
     }
-    main .main__logo a img {
-        margin-right: 5px;
+    main .main__logo a img,
+    main section.cars__base .base__detal img {
+        margin: 0 5px 0 0 !important;
+        max-height: 30px;
+        max-width: 50px;
+        width: auto !important;
     }
     main .logo__text {
         margin-top: 0;
+    }
+    main .main__logo a .fa-chevron-down {
+        bottom: auto;
+        left: auto;
+        right: 15px;
+        font-size: inherit;
+
     }
 
     main section.cars__base {
         position: fixed;
         top: 0;
-        background: white;
+        background: #F2F2F2;
         left: 0;
         width: 100%;
         height: 100vh;
         z-index: 999;
-        padding-top: 10%;
+        padding: 10% 15px;
         align-content: center;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        overflow-y: auto !important;
     }
 
     main section.cars__base .fa-times {
         position: absolute;
-        right: 30px;
+        right: 20px;
         top: 30px;
         font-size: 20px;
         display: block;
