--- a/style/style.css
+++ b/style/style.css
@@ -968,17 +968,18 @@ main section.cars__base .fa-times {
         width: 100%;
         height: 100vh;
         z-index: 999;
-        padding: 10% 15px;
+        padding: 50px 15px;
         align-content: center;
         flex-direction: column;
         flex-wrap: nowrap;
         overflow-y: auto !important;
+        justify-content: flex-start !important;
     }
 
     main section.cars__base .fa-times {
         position: absolute;
         right: 20px;
-        top: 30px;
+        top: 20px;
         font-size: 20px;
         display: block;
     }
