group_view: ui change for product

--- a/style/style.css
+++ b/style/style.css
@@ -359,7 +359,7 @@ main.detal .card__border_in {
 }
 .sale__card .card__check .check__pieces .fa-times-circle {
     font-size: 12px;
-    color: #FFC505;
+    color: #f52323;
 }
 .sale__card .card__check .check__pieces p {
     font-size: 12px;
