--- a/style/style.css
+++ b/style/style.css
@@ -323,7 +323,7 @@ section.sale .sale__wrrap {
     display: table-cell;
     vertical-align: middle;
     font-size: 13px;
-    font-weight: bold;
+    font-weight: 500;
     text-align: left;
     color: #000;
 }
